[gd_scene load_steps=5 format=3 uid="uid://dmd47mdtlhvbm"]

[ext_resource type="Script" path="res://characters/enemies/jaqueira/jaca.gd" id="1_41rrw"]
[ext_resource type="Texture2D" uid="uid://dm7mje131jhhq" path="res://characters/enemies/jaqueira/sprites/jaca-Sheet.png" id="2_o6686"]
[ext_resource type="Script" path="res://characters/enemies/jaqueira/attack.gd" id="3_woc0k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mfy5n"]
radius = 7.0

[node name="Jaca" type="Node2D"]
script = ExtResource("1_41rrw")

[node name="Turnable" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Turnable"]
texture_filter = 1
texture = ExtResource("2_o6686")
region_enabled = true
region_rect = Rect2(0, 0, 20, 20)

[node name="Area2D" type="Area2D" parent="Turnable" groups=["enemies"]]
collision_layer = 8
script = ExtResource("3_woc0k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Turnable/Area2D"]
shape = SubResource("CircleShape2D_mfy5n")
disabled = true

[node name="KillTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="Turnable/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_kill_timer_timeout"]
